--- a/jheelu/index2.html
+++ b/jheelu/index2.html
@@ -8,7 +8,42 @@
 </head>
 <body>
     <div class="container">
-         
+         <div class="calculator">
+            <form>
+                <div class="display">
+                    <input type="text" name="display">
+                </div>
+                <div>
+                    <input type="button" value="AC" onclick="display.value ='' " class="operator sizeall">
+                    <input type="button" value="DE" onclick="display.value =display.value.toString().slice(0,-1) " class="operator sizeall ">
+                    <input type="button" value="." onclick="display.value +='.' " class="operator sizeall">
+                    <input type="button" value="/" onclick="display.value +='/' " class="operator sizeall">
+                </div>
+                <div>
+                    <input type="button" value="7" onclick="display.value +='7' " class="sizeall">
+                    <input type="button" value="8" onclick="display.value +='8' " class="sizeall">
+                    <input type="button" value="9" onclick="display.value +='9' " class="sizeall">
+                    <input type="button" value="*" onclick="display.value +='*' " class="operator sizeall">
+                </div>
+                <div>
+                    <input type="button" value="4" onclick="display.value +='4' " class="sizeall">
+                    <input type="button" value="5" onclick="display.value +='5' " class="sizeall">
+                    <input type="button" value="6" onclick="display.value +='6' " class="sizeall">
+                    <input type="button" value="-" onclick="display.value +='-' " class="operator sizeall">
+                </div>
+                <div>
+                    <input type="button" value="1" onclick="display.value +='1' " class="sizeall">
+                    <input type="button" value="2" onclick="display.value +='2' " class="sizeall">
+                    <input type="button" value="3" onclick="display.value +='3' " class="sizeall">
+                    <input type="button" value="+" onclick="display.value +='+' " class="operator sizeall">
+                </div>
+                <div>
+                    <input type="button" value="00" onclick="display.value +='00' " class="sizeall">
+                    <input type="button" value="0" onclick="display.value +='0' " class="sizeall">
+                    <input type="button" value="=" onclick="display.value = eval(display.value)"  class="equal operator sizeall">
+                </div>
+            </form>
+         </div>
     </div>
     
 </body>
